<resources>
    <string name="app_name">TaskApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="status_task_todo">A fazer</string>
    <string name="status_task_doing">Fazendo</string>
    <string name="status_task_done">Feitas</string>

    <!-- Bottom Sheet -->
    <string name="title_bottom_sheet">Atenção</string>
    <string name="text_bottom_sheet">Entendi</string>
    <string name="text_empty_fields">Preencha todos os campos</string>
    <string name="text_error_email">Digite um e-mail válido</string>
    <string name="text_error_pass">Digite uma senha</string>
    <string name="text_accept_email">Email enviado com sucesso</string>
    <string name="text_accept_register">Conta criada com sucesso</string>
    <string name="text_accept_description">Tarefa salva com sucesso</string>
    <string name="text_edit_task_success">Tarefa editada com sucesso</string>
    <string name="text_delete_task_success">Tarefa deletada com sucesso!</string>
    <string name="text_edit_task_toolbar">Editando Tarefa</string>">
    <string name="txt_bottom_login">Login</string>
    <string name="txt_criar_conta">Criar Conta</string>
    <string name="txt_esqueceu_senha">Esqueceu Senha</string>
    <string name="txt_hint_digite_sua_senha">Digite sua senha</string>
    <string name="txt_hint_digite_seu_e_mail">Digite seu e-mail</string>
    <string name="txt_email">Email</string>
    <string name="txt_salvar">salvar</string>
    <string name="txt_enviar">Enviar</string>
    <string name="txt_descricao">Descrição</string>
    <string name="txt_senha">Senha</string>
    <string name="txt_confirm">Confirmar</string>

    <!-- Recover Account -->
    <string name="txt_recover_account">Um link para recuperação de senha foi enviado para o email.</string>

    <!-- Home Logout -->
    <string name="txt_title_dialog_confirm_logout">Deseja sair da sua conta ?</string>
    <string name="txt_btn_dialog_confirm_logout">Confirmar</string>
    <string name="txt_message_dialog_confirm_logout">Aperte confirmar para sair da sua conta.</string>

    <!-- Generic -->
    <string name="txt_task_list_empty">Nenhuma tarefa cadastrada.</string>
    <string name="txt_load_task_list_empty">Aguarde, estamos carregando as tarefas…</string>
    <string name="txt_delete_task">Deseja remover esta tarefa ?</string>">
    <string name="txt_warning_delete_task">Aperte em confirmar para remover essa tarefa.</string>">
    <string name="error_generic">Ocorreu um erro! Por favor tente novamente mais tarde.</string>

    <!-- Auth Firebase-->
    <string name="account_not_registered_register_fragment">Nenhuma conta encontrada com este email.</string>
    <string name="invalid_email_register_fragment">Insira um email válido</string>
    <string name="invalid_password_register_fragment">Senha inválida, tente novamente.</string>
    <string name="email_in_use_register_fragment">Este email já está em uso.</string>
    <string name="strong_password_register_fragment">Insira uma senha mais forte.</string>



</resources>